--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    background-image: url('../img/fundo.jpg');
+    background-image: url('../img/fundoo.png');
     background-size: auto 100vh;
-    font-family: Arial; 
+    font-family: 'Raleway', sans-serif;
     height: 100vh;
     font-size: 12;
   }
@@ -76,11 +76,13 @@ header {
     text-align:center;
   }
 
-
+  .site-title{
+    font-family: 'Source Code Pro', monospace;
   }
   
   .site-subtitle {
     font-style: italic;
+    line-height: 2.5;
   }
 
  .site-btitle {
@@ -88,8 +90,51 @@ header {
    color: rgb(230, 0, 96)
  }
 
-  .img-portfolio {
-    height: 100px;
-    width: 100px;
+.portfolio {
+   padding: 2em;
+   color: purple;
+   margin-bottom: 1.5em;
+   font-size: 2em;
+   height: 100vh;
+ }
+
+ .portfolio h2 {
+  font-family: 'Source Code Pro', monospace;
+  color: purple;
+ }
+
+ .portfolio .grid {
+   display: grid;
+   gap: 2em;
+ }
+
+ @media (min-width: 560px) {
+  .portfolio .grid {
+    grid-template-columns: 200px 200px;
   }
+ }
+
+ @media (min-width: 880px) {
+  .portfolio .grid {
+    grid-template-columns: 200px 200px 200px;
+    justify-content: center;
+    height: calc(100vh - 4em - 48px - 1.5em);
+  }
+ }
+
+ .portfolio figure {
+   text-align: center;
+ }
+
+ .img-portfolio {
+    height: 180px;
+    width: 200px;
+  }
+
+ @media (min-width: 1200px) {
+  .img-portfolio {
+    height: 10em;
+    width: auto;
+  }
+ }  
 
